Changes for pdf endpoint
